--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class= "holder">
+		<div class="one" >1 </div>
+		<div class="two"  > 2</div>
+		<div class="three"  >3 </div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
